# loom

./: .gitignore  LICENSE  README.md  agent.sh  ask_mini.sh  brain.py  dashboard.py  dashboard_v2.py  engine.py  panel.sh  pipeline.py  pyproject.toml  requirements.txt  router.py  run_pipeline.sh  start_task.sh  task_status.json  youdown-brain.sh
agents/: ahmet.md  architect.md  backend.md  builder.md  ceylin.md  deployer.md  designer.md  director.md  ece.md  frontend.md  hasan.md  huseyin.md  ismail.md  reviewer.md  saki.md  zeynep.md
lib/: channel_watcher.sh  handoff.sh  msg_watcher.sh  orchestrator.sh  protocol.sh  qa_gate.sh  status_watcher.sh
teams/: api.json  backend.json  design.json  orchestration.json  orkestrasyon.json  qa.json  quality.json  tasarim.json
